# ox

./: .gitignore  .ocamlformat  dune-project  ox.opam  test.input
lib/: ast.ml  builtins.ml  dune  env.ml  intp.ml  lexer.mll  parse.ml  parser.mly  printer.ml.txt  value.ml
test/: dune  expr.t  intepreter.t  variable.t
